Fix issue#13,#14 (#15)
* fix code smell

* fix code smells